# petplay-card-generator

./: .gitignore  CNAME  LICENSE-MIT  flake.nix  index.html
.direnv/: flake-profile-1-link
.github/workflows/: deploy-github-pages.yml
pet_id_generator/: Cargo.toml  README.md
pet_id_generator/.sass-cache/4eab53bed46723bb8ed6332aa26ea9fda57e48f1/: index.scssc
pet_id_generator/src/app/card/: component.rs
pet_id_generator/src/app/form/: component.rs  mod.rs
pet_id_generator/src/app/styles/: body.rs  main.rs
src/: app.rs
src/app/card/: mod.rs  style.rs
src/app/form/: style.rs
src/app/styles/: header.rs  mod.rs
