[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
catppuccin = "2.4.0"
gloo = "0.11.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
stylist = { version = "0.13.0", features = ["macros", "yew", "yew_integration"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
